feat: Kotlin Symbol processing (KSP) support